--- a/wp-content/themes/gonecocoanuts/style.css
+++ b/wp-content/themes/gonecocoanuts/style.css
@@ -61,7 +61,7 @@ body {
 	width: 100%;
 	text-align: center;
 	display: block;
-	background-image: url("https://www.gonecocoanuts.com/wp-content/uploads/2017/01/pineapple-wallpaper-pattern.jpg");
+	/*background-image: url("https://www.gonecocoanuts.com/wp-content/uploads/2017/01/pineapple-wallpaper-pattern.jpg");*/
 	background-repeat: repeat;
 	padding-bottom: 15px;
 	padding-top: 15px;
